# andoya-flask-demo

./: .gitignore  README.md  create-andoya-build.sh  pyproject.toml
andoyaflaskdemo/: app.py  handler.py
tests/: test_andoya_flask_demo.py
