[tool.poetry]
name = "andoya-flask-demo"
version = "0.1.0"
description = ""
authors = ["Ian Rodrigues <ianrdgs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
andoya-wsgi = {git = "ssh://git@github.com/andoya/wsgi.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
